--- a/app/src/main/res/layout/dialog_medium_picker.xml
+++ b/app/src/main/res/layout/dialog_medium_picker.xml
@@ -1,5 +1,4 @@
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -11,16 +10,17 @@
         android:layout_height="match_parent"
         android:scrollbars="none"
         app:layoutManager="com.simplemobiletools.commons.views.MyGridLayoutManager"
-        app:spanCount="@integer/media_columns_vertical_scroll"/>
+        app:spanCount="@integer/media_columns_vertical_scroll" />
 
     <com.simplemobiletools.commons.views.FastScroller
         android:id="@+id/fsMediaVertical"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_alignParentEnd="true"
-        android:paddingStart="@dimen/normal_margin">
+        android:paddingStart="@dimen/normal_margin"
+        android:paddingEnd="0dp">
 
-        <include layout="@layout/fastscroller_handle_vertical"/>
+        <include layout="@layout/fastscroller_handle_vertical" />
 
     </com.simplemobiletools.commons.views.FastScroller>
 
@@ -32,7 +32,7 @@
         android:layout_alignParentBottom="true"
         android:paddingTop="@dimen/normal_margin">
 
-        <include layout="@layout/fastscroller_handle_horizontal"/>
+        <include layout="@layout/fastscroller_handle_horizontal" />
 
     </com.simplemobiletools.commons.views.FastScroller>
 </RelativeLayout>
