--- a/app/src/main/res/layout/dialog_other_aspect_ratio.xml
+++ b/app/src/main/res/layout/dialog_other_aspect_ratio.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -15,151 +14,164 @@
         tools:ignore="HardcodedText">
 
         <RadioGroup
-            android:id="@+id/other_aspect_ratio_dialog_radio_1"
+            android:id="@+id/rgOtherAspectRatioDialogRadio1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/medium_margin"
             android:layout_weight="1">
 
             <com.simplemobiletools.commons.views.MyCompatRadioButton
-                android:id="@+id/other_aspect_ratio_2_1"
+                android:id="@+id/rbOtherAspectRatio_2_1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingStart="@dimen/small_margin"
                 android:paddingTop="@dimen/normal_margin"
+                android:paddingEnd="0dp"
                 android:paddingBottom="@dimen/normal_margin"
                 android:text="2:1"
-                android:textSize="@dimen/bigger_text_size"/>
+                android:textSize="@dimen/bigger_text_size" />
 
             <com.simplemobiletools.commons.views.MyCompatRadioButton
-                android:id="@+id/other_aspect_ratio_3_2"
+                android:id="@+id/rbOtherAspectRatio_3_2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingStart="@dimen/small_margin"
                 android:paddingTop="@dimen/normal_margin"
+                android:paddingEnd="0dp"
                 android:paddingBottom="@dimen/normal_margin"
                 android:text="3:2"
-                android:textSize="@dimen/bigger_text_size"/>
+                android:textSize="@dimen/bigger_text_size" />
 
             <com.simplemobiletools.commons.views.MyCompatRadioButton
-                android:id="@+id/other_aspect_ratio_4_3"
+                android:id="@+id/rbOtherAspectRatio_4_3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingStart="@dimen/small_margin"
                 android:paddingTop="@dimen/normal_margin"
+                android:paddingEnd="0dp"
                 android:paddingBottom="@dimen/normal_margin"
                 android:text="4:3"
-                android:textSize="@dimen/bigger_text_size"/>
+                android:textSize="@dimen/bigger_text_size" />
 
             <com.simplemobiletools.commons.views.MyCompatRadioButton
-                android:id="@+id/other_aspect_ratio_5_3"
+                android:id="@+id/rbOtherAspectRatio_5_3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingStart="@dimen/small_margin"
                 android:paddingTop="@dimen/normal_margin"
+                android:paddingEnd="0dp"
                 android:paddingBottom="@dimen/normal_margin"
                 android:text="5:3"
-                android:textSize="@dimen/bigger_text_size"/>
+                android:textSize="@dimen/bigger_text_size" />
 
             <com.simplemobiletools.commons.views.MyCompatRadioButton
-                android:id="@+id/other_aspect_ratio_16_9"
+                android:id="@+id/rbOtherAspectRatio_16_9"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingStart="@dimen/small_margin"
                 android:paddingTop="@dimen/normal_margin"
+                android:paddingEnd="0dp"
                 android:paddingBottom="@dimen/normal_margin"
                 android:text="16:9"
-                android:textSize="@dimen/bigger_text_size"/>
+                android:textSize="@dimen/bigger_text_size" />
 
             <com.simplemobiletools.commons.views.MyCompatRadioButton
-                android:id="@+id/other_aspect_ratio_19_9"
+                android:id="@+id/rbOtherAspectRatio_19_9"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingStart="@dimen/small_margin"
                 android:paddingTop="@dimen/normal_margin"
+                android:paddingEnd="0dp"
                 android:paddingBottom="@dimen/normal_margin"
                 android:text="19:9"
-                android:textSize="@dimen/bigger_text_size"/>
+                android:textSize="@dimen/bigger_text_size" />
 
             <com.simplemobiletools.commons.views.MyCompatRadioButton
-                android:id="@+id/other_aspect_ratio_custom"
+                android:id="@+id/rbOtherAspectRatioCustom"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingStart="@dimen/small_margin"
                 android:paddingTop="@dimen/normal_margin"
+                android:paddingEnd="0dp"
                 android:paddingBottom="@dimen/normal_margin"
                 android:text="@string/custom"
-                android:textSize="@dimen/bigger_text_size"/>
+                android:textSize="@dimen/bigger_text_size" />
 
         </RadioGroup>
 
         <RadioGroup
-            android:id="@+id/other_aspect_ratio_dialog_radio_2"
+            android:id="@+id/rgOtherAspectRatioDialogRadio_2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/medium_margin"
             android:layout_weight="1">
 
             <com.simplemobiletools.commons.views.MyCompatRadioButton
-                android:id="@+id/other_aspect_ratio_1_2"
+                android:id="@+id/rbOtherAspectRatio_1_2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingStart="@dimen/small_margin"
                 android:paddingTop="@dimen/normal_margin"
+                android:paddingEnd="0dp"
                 android:paddingBottom="@dimen/normal_margin"
                 android:text="1:2"
-                android:textSize="@dimen/bigger_text_size"/>
+                android:textSize="@dimen/bigger_text_size" />
 
             <com.simplemobiletools.commons.views.MyCompatRadioButton
-                android:id="@+id/other_aspect_ratio_2_3"
+                android:id="@+id/rbOtherAspectRatio_2_3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingStart="@dimen/small_margin"
                 android:paddingTop="@dimen/normal_margin"
+                android:paddingEnd="0dp"
                 android:paddingBottom="@dimen/normal_margin"
                 android:text="2:3"
-                android:textSize="@dimen/bigger_text_size"/>
+                android:textSize="@dimen/bigger_text_size" />
 
 
             <com.simplemobiletools.commons.views.MyCompatRadioButton
-                android:id="@+id/other_aspect_ratio_3_4"
+                android:id="@+id/rbOtherAspectRatio_3_4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingStart="@dimen/small_margin"
                 android:paddingTop="@dimen/normal_margin"
+                android:paddingEnd="0dp"
                 android:paddingBottom="@dimen/normal_margin"
                 android:text="3:4"
-                android:textSize="@dimen/bigger_text_size"/>
+                android:textSize="@dimen/bigger_text_size" />
 
             <com.simplemobiletools.commons.views.MyCompatRadioButton
-                android:id="@+id/other_aspect_ratio_3_5"
+                android:id="@+id/rbOtherAspectRatio_3_5"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingStart="@dimen/small_margin"
                 android:paddingTop="@dimen/normal_margin"
+                android:paddingEnd="0dp"
                 android:paddingBottom="@dimen/normal_margin"
                 android:text="3:5"
-                android:textSize="@dimen/bigger_text_size"/>
+                android:textSize="@dimen/bigger_text_size" />
 
             <com.simplemobiletools.commons.views.MyCompatRadioButton
-                android:id="@+id/other_aspect_ratio_9_16"
+                android:id="@+id/rbOtherAspectRatio_9_16"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingStart="@dimen/small_margin"
                 android:paddingTop="@dimen/normal_margin"
+                android:paddingEnd="0dp"
                 android:paddingBottom="@dimen/normal_margin"
                 android:text="9:16"
-                android:textSize="@dimen/bigger_text_size"/>
+                android:textSize="@dimen/bigger_text_size" />
 
             <com.simplemobiletools.commons.views.MyCompatRadioButton
-                android:id="@+id/other_aspect_ratio_9_19"
+                android:id="@+id/rbOtherAspectRatio_9_19"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingStart="@dimen/small_margin"
                 android:paddingTop="@dimen/normal_margin"
+                android:paddingEnd="0dp"
                 android:paddingBottom="@dimen/normal_margin"
                 android:text="9:19"
-                android:textSize="@dimen/bigger_text_size"/>
+                android:textSize="@dimen/bigger_text_size" />
 
         </RadioGroup>
     </LinearLayout>
