--- a/app/src/main/res/layout/dialog_resize_image.xml
+++ b/app/src/main/res/layout/dialog_resize_image.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -9,52 +8,52 @@
     android:paddingRight="@dimen/activity_margin">
 
     <com.simplemobiletools.commons.views.MyTextView
-        android:id="@+id/image_width_label"
+        android:id="@+id/tvImageWidthLabel"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:text="@string/width"/>
+        android:text="@string/width" />
 
     <com.simplemobiletools.commons.views.MyEditText
-        android:id="@+id/image_width"
+        android:id="@+id/etImageWidth"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/image_width_label"
+        android:layout_below="@+id/tvImageWidthLabel"
         android:layout_marginBottom="@dimen/activity_margin"
         android:inputType="number"
         android:maxLength="6"
         android:maxLines="1"
         android:textCursorDrawable="@null"
-        android:textSize="@dimen/normal_text_size"/>
+        android:textSize="@dimen/normal_text_size" />
 
     <com.simplemobiletools.commons.views.MyTextView
-        android:id="@+id/image_height_label"
+        android:id="@+id/tvImageHeightLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
-        android:layout_toEndOf="@+id/image_width_label"
-        android:text="@string/height"/>
+        android:layout_toEndOf="@+id/tvImageWidthLabel"
+        android:text="@string/height" />
 
     <com.simplemobiletools.commons.views.MyEditText
-        android:id="@+id/image_height"
+        android:id="@+id/etImageHeight"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/image_width_label"
-        android:layout_alignStart="@+id/image_height_label"
+        android:layout_below="@+id/tvImageWidthLabel"
+        android:layout_alignStart="@+id/tvImageHeightLabel"
         android:inputType="number"
         android:maxLength="6"
         android:maxLines="1"
         android:textCursorDrawable="@null"
-        android:textSize="@dimen/normal_text_size"/>
+        android:textSize="@dimen/normal_text_size" />
 
     <com.simplemobiletools.commons.views.MyAppCompatCheckbox
-        android:id="@+id/keep_aspect_ratio"
+        android:id="@+id/cbKeepAspectRatio"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/image_height"
+        android:layout_below="@+id/etImageHeight"
         android:layout_marginTop="@dimen/activity_margin"
         android:checked="true"
         android:paddingTop="@dimen/activity_margin"
         android:paddingBottom="@dimen/activity_margin"
-        android:text="@string/keep_aspect_ratio"/>
+        android:text="@string/keep_aspect_ratio" />
 
 </RelativeLayout>
