--- a/app/src/main/res/layout/dialog_resize_image_with_path.xml
+++ b/app/src/main/res/layout/dialog_resize_image_with_path.xml
@@ -8,17 +8,17 @@
     android:paddingRight="@dimen/activity_margin">
 
     <com.simplemobiletools.commons.views.MyTextView
-        android:id="@+id/image_width_label"
+        android:id="@+id/tvImageWidthLabel"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:text="@string/width"
         android:textSize="@dimen/normal_text_size" />
 
     <com.simplemobiletools.commons.views.MyEditText
-        android:id="@+id/image_width"
+        android:id="@+id/etImageWidth"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/image_width_label"
+        android:layout_below="@+id/tvImageWidthLabel"
         android:inputType="number"
         android:maxLength="6"
         android:maxLines="1"
@@ -26,20 +26,20 @@
         android:textSize="@dimen/normal_text_size" />
 
     <com.simplemobiletools.commons.views.MyTextView
-        android:id="@+id/image_height_label"
+        android:id="@+id/tvImageHeightLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
-        android:layout_toEndOf="@+id/image_width_label"
+        android:layout_toEndOf="@+id/tvImageWidthLabel"
         android:text="@string/height"
         android:textSize="@dimen/normal_text_size" />
 
     <com.simplemobiletools.commons.views.MyEditText
-        android:id="@+id/image_height"
+        android:id="@+id/etImageHeight"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/image_width_label"
-        android:layout_alignStart="@+id/image_height_label"
+        android:layout_below="@+id/tvImageWidthLabel"
+        android:layout_alignStart="@+id/tvImageHeightLabel"
         android:inputType="number"
         android:maxLength="6"
         android:maxLines="1"
@@ -47,48 +47,49 @@
         android:textSize="@dimen/normal_text_size" />
 
     <com.simplemobiletools.commons.views.MyTextView
-        android:id="@+id/image_path_label"
+        android:id="@+id/tvImagePathLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/image_height"
+        android:layout_below="@+id/etImageHeight"
         android:layout_marginTop="@dimen/activity_margin"
         android:text="@string/path"
         android:textSize="@dimen/normal_text_size" />
 
     <com.simplemobiletools.commons.views.MyTextView
-        android:id="@+id/image_path"
+        android:id="@+id/tvImagePath"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/image_path_label"
+        android:layout_below="@+id/tvImagePathLabel"
         android:layout_marginStart="@dimen/activity_margin"
         android:layout_marginBottom="@dimen/activity_margin"
         android:paddingTop="@dimen/small_margin"
         android:paddingEnd="@dimen/small_margin"
+        android:paddingStart="0dp"
         android:textSize="@dimen/normal_text_size" />
 
     <com.simplemobiletools.commons.views.MyEditText
-        android:id="@+id/image_name"
+        android:id="@+id/etImageName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/image_path"
+        android:layout_below="@+id/tvImagePath"
         android:layout_marginBottom="@dimen/activity_margin"
         android:singleLine="true"
         android:textCursorDrawable="@null"
         android:textSize="@dimen/normal_text_size" />
 
     <com.simplemobiletools.commons.views.MyTextView
-        android:id="@+id/image_extension_label"
+        android:id="@+id/tvImageExtensionLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/image_name"
+        android:layout_below="@+id/etImageName"
         android:text="@string/extension"
         android:textSize="@dimen/normal_text_size" />
 
     <com.simplemobiletools.commons.views.MyEditText
-        android:id="@+id/image_extension"
+        android:id="@+id/etImageExtension"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/image_extension_label"
+        android:layout_below="@+id/tvImageExtensionLabel"
         android:layout_marginBottom="@dimen/activity_margin"
         android:singleLine="true"
         android:textCursorDrawable="@null"
