--- a/app/src/main/res/layout/dialog_save_as.xml
+++ b/app/src/main/res/layout/dialog_save_as.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -10,38 +9,39 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/path"
-        android:textSize="@dimen/smaller_text_size"/>
+        android:textSize="@dimen/smaller_text_size" />
 
     <com.simplemobiletools.commons.views.MyTextView
-        android:id="@+id/save_as_path"
+        android:id="@+id/tvSaveAsPath"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/activity_margin"
         android:layout_marginBottom="@dimen/activity_margin"
+        android:paddingStart="0dp"
         android:paddingTop="@dimen/small_margin"
-        android:paddingEnd="@dimen/small_margin"/>
+        android:paddingEnd="@dimen/small_margin" />
 
     <com.simplemobiletools.commons.views.MyEditText
-        android:id="@+id/save_as_name"
+        android:id="@+id/etSaveAsName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/activity_margin"
         android:singleLine="true"
         android:textCursorDrawable="@null"
-        android:textSize="@dimen/normal_text_size"/>
+        android:textSize="@dimen/normal_text_size" />
 
     <com.simplemobiletools.commons.views.MyTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/extension"/>
+        android:text="@string/extension" />
 
     <com.simplemobiletools.commons.views.MyEditText
-        android:id="@+id/save_as_extension"
+        android:id="@+id/etSaveAsExtension"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/activity_margin"
         android:singleLine="true"
         android:textCursorDrawable="@null"
-        android:textSize="@dimen/normal_text_size"/>
+        android:textSize="@dimen/normal_text_size" />
 
 </LinearLayout>
