--- a/app/src/main/res/layout/directory_item_list.xml
+++ b/app/src/main/res/layout/directory_item_list.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/dir_holder"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layoutDir"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="?attr/selectableItemBackground"
@@ -9,21 +10,23 @@
     android:foreground="@drawable/selector"
     android:paddingStart="@dimen/medium_margin"
     android:paddingTop="@dimen/small_margin"
-    android:paddingBottom="@dimen/small_margin">
+    android:paddingEnd="0dp"
+    android:paddingBottom="@dimen/small_margin"
+    tools:ignore="UnusedAttribute">
 
     <com.loitp.ui.view.MySquareImageView
-        android:id="@+id/dir_thumbnail"
+        android:id="@+id/ivDirThumbnail"
         android:layout_width="@dimen/list_view_folder_thumbnail_size"
         android:layout_height="@dimen/list_view_folder_thumbnail_size" />
 
-    <ImageView
-        android:id="@+id/dir_lock"
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/ivDirLock"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignStart="@+id/dir_thumbnail"
-        android:layout_alignTop="@+id/dir_thumbnail"
-        android:layout_alignEnd="@+id/dir_thumbnail"
-        android:layout_alignBottom="@+id/dir_thumbnail"
+        android:layout_alignStart="@+id/ivDirThumbnail"
+        android:layout_alignTop="@+id/ivDirThumbnail"
+        android:layout_alignEnd="@+id/ivDirThumbnail"
+        android:layout_alignBottom="@+id/ivDirThumbnail"
         android:layout_centerInParent="true"
         android:background="@color/default_background_color"
         android:contentDescription="@string/lock_folder"
@@ -31,8 +34,8 @@
         android:src="@drawable/ic_lock_vector"
         android:visibility="gone" />
 
-    <ImageView
-        android:id="@+id/dir_check"
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/ivDirCheck"
         android:layout_width="@dimen/selection_check_size"
         android:layout_height="@dimen/selection_check_size"
         android:layout_alignParentTop="true"
@@ -45,11 +48,11 @@
         android:src="@drawable/ic_check_vector"
         android:visibility="gone" />
 
-    <TextView
-        android:id="@+id/dir_name"
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tvDirName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toEndOf="@+id/dir_thumbnail"
+        android:layout_toEndOf="@+id/ivDirThumbnail"
         android:ellipsize="end"
         android:maxLines="1"
         android:paddingStart="@dimen/medium_margin"
@@ -57,12 +60,12 @@
         android:textColor="@android:color/white"
         android:textSize="@dimen/bigger_text_size" />
 
-    <TextView
-        android:id="@+id/dir_path"
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tvDirPath"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/dir_name"
-        android:layout_alignStart="@+id/dir_name"
+        android:layout_below="@+id/tvDirName"
+        android:layout_alignStart="@+id/tvDirName"
         android:layout_marginEnd="@dimen/activity_margin"
         android:alpha="0.4"
         android:ellipsize="end"
@@ -72,12 +75,12 @@
         android:textColor="@android:color/white"
         android:textSize="@dimen/smaller_text_size" />
 
-    <TextView
-        android:id="@+id/photo_cnt"
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tvPhotoCnt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/dir_name"
-        android:layout_toEndOf="@+id/dir_name"
+        android:layout_alignBaseline="@+id/tvDirName"
+        android:layout_toEndOf="@+id/tvDirName"
         android:alpha="0.4"
         android:textColor="@android:color/white"
         android:textSize="@dimen/smaller_text_size" />
@@ -92,8 +95,8 @@
         android:orientation="horizontal"
         android:paddingBottom="@dimen/tiny_margin">
 
-        <ImageView
-            android:id="@+id/dir_location"
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/ivDirLocation"
             android:layout_width="@dimen/sd_card_icon_size"
             android:layout_height="@dimen/sd_card_icon_size"
             android:contentDescription="@null"
@@ -101,8 +104,8 @@
             android:src="@drawable/ic_sd_card_vector"
             android:visibility="gone" />
 
-        <ImageView
-            android:id="@+id/dir_pin"
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/ivDirPin"
             android:layout_width="@dimen/sd_card_icon_size"
             android:layout_height="@dimen/sd_card_icon_size"
             android:contentDescription="@string/pin"
