--- a/app/src/main/res/layout/dialog_slideshow.xml
+++ b/app/src/main/res/layout/dialog_slideshow.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -12,16 +11,17 @@
         android:padding="@dimen/activity_margin">
 
         <com.simplemobiletools.commons.views.MyTextView
-            android:id="@+id/interval_label"
+            android:id="@+id/tvIntervalLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingStart="@dimen/medium_margin"
+            android:paddingEnd="0dp"
             android:paddingTop="@dimen/activity_margin"
             android:paddingBottom="@dimen/activity_margin"
-            android:text="@string/interval"/>
+            android:text="@string/interval" />
 
         <com.simplemobiletools.commons.views.MyEditText
-            android:id="@+id/interval_value"
+            android:id="@+id/etIntervalValue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
@@ -31,13 +31,14 @@
             android:inputType="number"
             android:maxLength="5"
             android:textCursorDrawable="@null"
-            android:textSize="@dimen/normal_text_size"/>
+            android:textSize="@dimen/normal_text_size"
+            tools:ignore="RelativeOverlap" />
 
         <RelativeLayout
-            android:id="@+id/animation_holder"
+            android:id="@+id/layoutAnimation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/interval_label"
+            android:layout_below="@+id/tvIntervalLabel"
             android:layout_marginTop="@dimen/medium_margin"
             android:background="?attr/selectableItemBackground"
             android:paddingTop="@dimen/bigger_margin"
@@ -47,30 +48,31 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_toStartOf="@+id/animation_value"
+                android:layout_toStartOf="@+id/tvAnimationValue"
                 android:paddingLeft="@dimen/medium_margin"
                 android:paddingRight="@dimen/medium_margin"
-                android:text="@string/animation"/>
+                android:text="@string/animation" />
 
             <com.simplemobiletools.commons.views.MyTextView
-                android:id="@+id/animation_value"
+                android:id="@+id/tvAnimationValue"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_marginEnd="@dimen/medium_margin"
                 android:background="@null"
                 android:clickable="false"
-                tools:text="@string/slide"/>
+                tools:text="@string/slide" />
 
         </RelativeLayout>
 
         <RelativeLayout
-            android:id="@+id/include_videos_holder"
+            android:id="@+id/layoutIncludeVideos"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/animation_holder"
+            android:layout_below="@+id/layoutAnimation"
             android:background="?attr/selectableItemBackground"
             android:paddingStart="@dimen/medium_margin"
+            android:paddingEnd="0dp"
             android:paddingTop="@dimen/activity_margin"
             android:paddingBottom="@dimen/activity_margin">
 
@@ -80,87 +82,91 @@
                 android:layout_height="wrap_content"
                 android:background="@null"
                 android:clickable="false"
-                android:text="@string/include_videos"/>
+                android:text="@string/include_videos" />
 
         </RelativeLayout>
 
         <RelativeLayout
-            android:id="@+id/include_gifs_holder"
+            android:id="@+id/layoutIncludeGifs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/include_videos_holder"
+            android:layout_below="@+id/layoutIncludeVideos"
             android:background="?attr/selectableItemBackground"
             android:paddingStart="@dimen/medium_margin"
+            android:paddingEnd="0dp"
             android:paddingTop="@dimen/activity_margin"
             android:paddingBottom="@dimen/activity_margin">
 
             <com.simplemobiletools.commons.views.MySwitchCompat
-                android:id="@+id/include_gifs"
+                android:id="@+id/swIncludeGifs"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@null"
                 android:clickable="false"
-                android:text="@string/include_gifs"/>
+                android:text="@string/include_gifs" />
 
         </RelativeLayout>
 
         <RelativeLayout
-            android:id="@+id/random_order_holder"
+            android:id="@+id/layoutRandomOrder"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/include_gifs_holder"
+            android:layout_below="@+id/layoutIncludeGifs"
             android:background="?attr/selectableItemBackground"
             android:paddingStart="@dimen/medium_margin"
             android:paddingTop="@dimen/activity_margin"
+            android:paddingEnd="0dp"
             android:paddingBottom="@dimen/activity_margin">
 
             <com.simplemobiletools.commons.views.MySwitchCompat
-                android:id="@+id/random_order"
+                android:id="@+id/swRandomOrder"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@null"
                 android:clickable="false"
-                android:text="@string/random_order"/>
+                android:text="@string/random_order" />
 
         </RelativeLayout>
 
         <RelativeLayout
-            android:id="@+id/move_backwards_holder"
+            android:id="@+id/layoutMoveBackwards"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/random_order_holder"
+            android:layout_below="@+id/layoutRandomOrder"
             android:background="?attr/selectableItemBackground"
             android:paddingStart="@dimen/medium_margin"
+            android:paddingEnd="0dp"
             android:paddingTop="@dimen/activity_margin"
             android:paddingBottom="@dimen/activity_margin">
 
             <com.simplemobiletools.commons.views.MySwitchCompat
-                android:id="@+id/move_backwards"
+                android:id="@+id/swMoveBackwards"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@null"
                 android:clickable="false"
-                android:text="@string/move_backwards"/>
+                android:text="@string/move_backwards" />
 
         </RelativeLayout>
 
         <RelativeLayout
-            android:id="@+id/loop_slideshow_holder"
+            android:id="@+id/layoutLoopSlideshow"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/move_backwards_holder"
+            android:layout_below="@+id/layoutMoveBackwards"
             android:background="?attr/selectableItemBackground"
             android:paddingStart="@dimen/medium_margin"
+            android:paddingEnd="0dp"
             android:paddingTop="@dimen/activity_margin"
             android:paddingBottom="@dimen/activity_margin">
 
             <com.simplemobiletools.commons.views.MySwitchCompat
-                android:id="@+id/loop_slideshow"
+                android:id="@+id/swLoopSlideshow"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@null"
                 android:clickable="false"
-                android:text="@string/loop_slideshow"/>
+                android:text="@string/loop_slideshow" />
 
         </RelativeLayout>
     </RelativeLayout>
