--- a/app/src/main/res/layout/directory_item_grid_square.xml
+++ b/app/src/main/res/layout/directory_item_grid_square.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/dir_holder"
+    android:id="@+id/layoutDir"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:clickable="true"
@@ -9,18 +9,18 @@
     android:padding="1px">
 
     <com.loitp.ui.view.MySquareImageView
-        android:id="@+id/dir_thumbnail"
+        android:id="@+id/ivDirThumbnail"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <ImageView
-        android:id="@+id/dir_lock"
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/ivDirLock"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignStart="@+id/dir_thumbnail"
-        android:layout_alignTop="@+id/dir_thumbnail"
-        android:layout_alignEnd="@+id/dir_thumbnail"
-        android:layout_alignBottom="@+id/dir_thumbnail"
+        android:layout_alignStart="@+id/ivDirThumbnail"
+        android:layout_alignTop="@+id/ivDirThumbnail"
+        android:layout_alignEnd="@+id/ivDirThumbnail"
+        android:layout_alignBottom="@+id/ivDirThumbnail"
         android:layout_centerInParent="true"
         android:background="@color/default_background_color"
         android:contentDescription="@string/lock_folder"
@@ -28,8 +28,8 @@
         android:src="@drawable/ic_lock_vector"
         android:visibility="gone" />
 
-    <ImageView
-        android:id="@+id/dir_check"
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/ivDirCheck"
         android:layout_width="@dimen/selection_check_size"
         android:layout_height="@dimen/selection_check_size"
         android:layout_alignEnd="@+id/dir_shadow_holder"
@@ -42,8 +42,8 @@
         android:src="@drawable/ic_check_vector"
         android:visibility="gone" />
 
-    <ImageView
-        android:id="@+id/dir_pin"
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/ivDirPin"
         android:layout_width="@dimen/selection_check_size"
         android:layout_height="@dimen/selection_check_size"
         android:layout_alignParentStart="true"
@@ -55,22 +55,22 @@
         android:src="@drawable/ic_pin"
         android:visibility="gone" />
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/dir_shadow_holder"
         android:layout_width="match_parent"
         android:layout_height="@dimen/tmb_shadow_height"
-        android:layout_alignStart="@+id/dir_bottom_holder"
-        android:layout_alignEnd="@+id/dir_bottom_holder"
+        android:layout_alignStart="@+id/layoutDirBottom"
+        android:layout_alignEnd="@+id/layoutDirBottom"
         android:layout_alignParentBottom="true"
         android:background="@drawable/gradient_background"
         android:contentDescription="@null" />
 
     <LinearLayout
-        android:id="@+id/dir_bottom_holder"
+        android:id="@+id/layoutDirBottom"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/dir_thumbnail"
-        android:layout_alignEnd="@+id/dir_thumbnail"
+        android:layout_alignStart="@+id/ivDirThumbnail"
+        android:layout_alignEnd="@+id/ivDirThumbnail"
         android:layout_alignParentBottom="true"
         android:gravity="bottom"
         android:orientation="vertical"
@@ -79,8 +79,8 @@
         android:paddingRight="@dimen/medium_margin"
         android:paddingBottom="@dimen/small_margin">
 
-        <TextView
-            android:id="@+id/dir_name"
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvDirName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingBottom="@dimen/small_margin"
@@ -90,8 +90,8 @@
             android:textSize="@dimen/normal_text_size"
             tools:src="Camera" />
 
-        <TextView
-            android:id="@+id/photo_cnt"
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvPhotoCnt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@android:color/white"
@@ -100,14 +100,15 @@
 
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/dir_location"
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/ivDirLocation"
         android:layout_width="@dimen/sd_card_icon_size"
         android:layout_height="@dimen/sd_card_icon_size"
-        android:layout_alignEnd="@+id/dir_bottom_holder"
+        android:layout_alignEnd="@+id/layoutDirBottom"
         android:layout_alignParentBottom="true"
         android:alpha="0.8"
         android:contentDescription="@null"
+        android:paddingStart="0dp"
         android:paddingEnd="@dimen/small_margin"
         android:paddingBottom="@dimen/small_margin"
         android:src="@drawable/ic_sd_card_vector"
