--- a/app/src/main/res/layout/editor_filter_item.xml
+++ b/app/src/main/res/layout/editor_filter_item.xml
@@ -1,21 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/editor_filter_item_thumbnail"
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/ivEditorFilterItemThumbnail"
         android:layout_width="@dimen/bottom_filters_thumbnail_size"
         android:layout_height="@dimen/bottom_filters_thumbnail_size"
-        android:layout_above="@+id/editor_filter_item_label"
+        android:layout_above="@+id/tvEditorFilterItemLabel"
         android:background="@drawable/stroke_background"
         android:contentDescription="@null"
-        android:padding="1dp"/>
+        android:padding="1dp" />
 
-    <TextView
-        android:id="@+id/editor_filter_item_label"
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tvEditorFilterItemLabel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -23,6 +22,6 @@
         android:gravity="center_horizontal"
         android:textColor="@android:color/white"
         android:textSize="@dimen/smaller_text_size"
-        tools:text="Filter"/>
+        tools:text="Filter" />
 
 </RelativeLayout>
