--- a/app/src/main/res/layout/fragment_holder.xml
+++ b/app/src/main/res/layout/fragment_holder.xml
@@ -5,11 +5,11 @@
     android:layout_height="match_parent">
 
     <FrameLayout
-        android:id="@+id/fragment_placeholder"
+        android:id="@+id/fragmentPlaceholder"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/ivTopShadow"
         android:layout_width="match_parent"
         android:layout_height="@dimen/default_status_action_height"
