--- a/app/src/main/res/layout/item_manage_folder.xml
+++ b/app/src/main/res/layout/item_manage_folder.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/manage_folder_holder"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layoutManageFolder"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?attr/selectableItemBackground"
     android:clickable="true"
     android:focusable="true"
     android:foreground="@drawable/selector"
-    android:padding="@dimen/activity_margin">
+    android:padding="@dimen/activity_margin"
+    tools:ignore="UnusedAttribute">
 
     <com.simplemobiletools.commons.views.MyTextView
-        android:id="@+id/manage_folder_title"
+        android:id="@+id/tvManageFolderTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_marginTop="@dimen/medium_margin"/>
+        android:layout_marginTop="@dimen/medium_margin" />
 
 </RelativeLayout>
