--- a/app/src/main/res/layout/pager_video_item.xml
+++ b/app/src/main/res/layout/pager_video_item.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/video_holder"
+    android:id="@+id/layoutVideo"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/video_preview"
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/ivVideoPreview"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
@@ -34,16 +34,16 @@
         android:layout_width="@dimen/media_side_slider_width"
         android:layout_height="match_parent" />
 
-    <ImageView
-        android:id="@+id/video_play_outline"
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/ivVideoPlayOutline"
         android:layout_width="@dimen/play_outline_size_big"
         android:layout_height="@dimen/play_outline_size_big"
         android:layout_centerInParent="true"
         android:padding="20dp"
         android:src="@drawable/ic_play_outline_vector" />
 
-    <ImageView
-        android:id="@+id/panorama_outline"
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/ivPanoramaOutline"
         android:layout_width="@dimen/play_outline_size_big"
         android:layout_height="@dimen/play_outline_size_big"
         android:layout_centerInParent="true"
@@ -51,8 +51,8 @@
         android:src="@drawable/ic_panorama_outline"
         android:visibility="gone" />
 
-    <TextView
-        android:id="@+id/video_details"
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tvVideoDetails"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -67,7 +67,7 @@
 
     <include layout="@layout/bottom_video_time_holder" />
 
-    <TextView
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvSlideInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
