--- a/app/src/main/res/layout/video_item_grid.xml
+++ b/app/src/main/res/layout/video_item_grid.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/media_item_holder"
+    android:id="@+id/layoutMediaItem"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:clickable="true"
     android:focusable="true">
 
     <com.loitp.ui.view.MySquareImageView
-        android:id="@+id/medium_thumbnail"
+        android:id="@+id/ivMediumThumbnail"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <ImageView
-        android:id="@+id/play_portrait_outline"
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/ivPlayPortraitOutline"
         android:layout_width="@dimen/selection_check_size"
         android:layout_height="@dimen/selection_check_size"
         android:layout_alignParentStart="true"
@@ -22,7 +22,7 @@
         android:src="@drawable/ic_play_outline_vector"
         android:visibility="gone" />
 
-    <TextView
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvVideoDuration"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -40,11 +40,11 @@
         android:visibility="gone"
         tools:text="02:34" />
 
-    <ImageView
-        android:id="@+id/medium_check"
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/ivMediumCheck"
         android:layout_width="@dimen/selection_check_size"
         android:layout_height="@dimen/selection_check_size"
-        android:layout_alignEnd="@+id/medium_name"
+        android:layout_alignEnd="@+id/tvMediumName"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_margin="@dimen/medium_margin"
@@ -54,12 +54,12 @@
         android:src="@drawable/ic_check_vector"
         android:visibility="gone" />
 
-    <TextView
-        android:id="@+id/medium_name"
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tvMediumName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/medium_thumbnail"
-        android:layout_alignEnd="@+id/medium_thumbnail"
+        android:layout_alignStart="@+id/ivMediumThumbnail"
+        android:layout_alignEnd="@+id/ivMediumThumbnail"
         android:layout_alignParentBottom="true"
         android:background="@drawable/gradient_background"
         android:ellipsize="end"
