--- a/app/src/main/res/layout/video_item_list.xml
+++ b/app/src/main/res/layout/video_item_list.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/media_item_holder"
+    android:id="@+id/layoutMediaItem"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="?attr/selectableItemBackground"
@@ -10,15 +10,17 @@
     android:foreground="@drawable/selector"
     android:paddingStart="@dimen/medium_margin"
     android:paddingTop="@dimen/small_margin"
-    android:paddingBottom="@dimen/small_margin">
+    android:paddingEnd="0dp"
+    android:paddingBottom="@dimen/small_margin"
+    tools:ignore="UnusedAttribute">
 
     <com.loitp.ui.view.MySquareImageView
-        android:id="@+id/medium_thumbnail"
+        android:id="@+id/ivMediumThumbnail"
         android:layout_width="@dimen/list_view_folder_thumbnail_size"
         android:layout_height="@dimen/list_view_folder_thumbnail_size" />
 
-    <ImageView
-        android:id="@+id/medium_check"
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/ivMediumCheck"
         android:layout_width="@dimen/selection_check_size"
         android:layout_height="@dimen/selection_check_size"
         android:layout_alignParentTop="true"
@@ -31,13 +33,13 @@
         android:src="@drawable/ic_check_vector"
         android:visibility="gone" />
 
-    <TextView
-        android:id="@+id/medium_name"
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tvMediumName"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignTop="@+id/medium_thumbnail"
-        android:layout_alignBottom="@+id/medium_thumbnail"
-        android:layout_toEndOf="@+id/medium_thumbnail"
+        android:layout_alignTop="@+id/ivMediumThumbnail"
+        android:layout_alignBottom="@+id/ivMediumThumbnail"
+        android:layout_toEndOf="@+id/ivMediumThumbnail"
         android:ellipsize="end"
         android:gravity="center_vertical"
         android:maxLines="3"
@@ -47,8 +49,8 @@
         android:textSize="@dimen/bigger_text_size"
         tools:text="My photo" />
 
-    <ImageView
-        android:id="@+id/play_portrait_outline"
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/ivPlayPortraitOutline"
         android:layout_width="@dimen/play_outline_icon_size"
         android:layout_height="@dimen/play_outline_icon_size"
         android:layout_alignParentEnd="true"
@@ -58,13 +60,13 @@
         android:src="@drawable/ic_play_outline_vector"
         android:visibility="gone" />
 
-    <TextView
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvVideoDuration"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="@dimen/medium_margin"
-        android:layout_toStartOf="@+id/play_portrait_outline"
+        android:layout_toStartOf="@+id/ivPlayPortraitOutline"
         android:paddingLeft="@dimen/small_margin"
         android:paddingRight="@dimen/small_margin"
         android:paddingBottom="@dimen/small_margin"
