--- a/app/src/main/res/layout/widget.xml
+++ b/app/src/main/res/layout/widget.xml
@@ -1,24 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/widget_holder"
+    android:id="@+id/layoutWidget"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/widget_imageview"
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/ivWidget"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/widget_folder_name"
+        android:layout_above="@+id/tvWidgetFolderName"
         android:layout_centerInParent="true"
         android:paddingLeft="@dimen/tiny_margin"
         android:paddingTop="@dimen/tiny_margin"
         android:paddingRight="@dimen/tiny_margin"
-        tools:src="@mipmap/ic_launcher"/>
+        tools:src="@mipmap/ic_launcher" />
 
-    <TextView
-        android:id="@+id/widget_folder_name"
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tvWidgetFolderName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -27,6 +26,6 @@
         android:lines="1"
         android:padding="@dimen/tiny_margin"
         android:textSize="@dimen/bigger_text_size"
-        tools:text="@string/internal"/>
+        tools:text="@string/internal" />
 
 </RelativeLayout>
