--- a/app/src/main/res/layout/fragment_holder.xml
+++ b/app/src/main/res/layout/fragment_holder.xml
@@ -18,7 +18,7 @@
 
     <include
         android:id="@+id/bottomActions"
-        layout="@layout/bottom_actions"
+        layout="@layout/view_bottom_actions"
         android:visibility="gone" />
 
 </RelativeLayout>
