--- a/app/src/main/res/menu/menu_cab_directories.xml
+++ b/app/src/main/res/menu/menu_cab_directories.xml
@@ -1,89 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/cab_delete"
+        android:id="@+id/menuCabDelete"
         android:icon="@drawable/ic_delete_vector"
         android:title="@string/delete"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="ifRoom" />
     <item
-        android:id="@+id/cab_properties"
+        android:id="@+id/menuCabProperties"
         android:icon="@drawable/ic_info"
         android:title="@string/properties"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="ifRoom" />
     <item
-        android:id="@+id/cab_pin"
+        android:id="@+id/menuCabPin"
         android:icon="@drawable/ic_pin"
         android:title="@string/pin_to_the_top"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="ifRoom" />
     <item
-        android:id="@+id/cab_unpin"
+        android:id="@+id/menuCabUnpin"
         android:icon="@drawable/ic_unpin"
         android:title="@string/unpin_folder"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="ifRoom" />
     <item
-        android:id="@+id/cab_rename"
+        android:id="@+id/menuCabRename"
         android:icon="@drawable/ic_rename_new"
         android:title="@string/rename"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="ifRoom" />
     <item
-        android:id="@+id/cab_hide"
+        android:id="@+id/menuCabHide"
         android:icon="@drawable/ic_hide"
         android:title="@string/hide_folder"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="ifRoom" />
     <item
-        android:id="@+id/cab_unhide"
+        android:id="@+id/menuCabUnhide"
         android:icon="@drawable/ic_unhide_vector"
         android:title="@string/unhide_folder"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="ifRoom" />
     <item
-        android:id="@+id/cab_copy_to"
+        android:id="@+id/menuCabCopyTo"
         android:title="@string/copy_to"
-        app:showAsAction="never"/>
+        app:showAsAction="never" />
     <item
-        android:id="@+id/cab_move_to"
+        android:id="@+id/menuCabMoveTo"
         android:title="@string/move_to"
-        app:showAsAction="never"/>
+        app:showAsAction="never" />
     <item
-        android:id="@+id/cab_create_shortcut"
+        android:id="@+id/menuCabCreateShortcut"
         android:title="@string/create_shortcut"
-        app:showAsAction="never"/>
+        app:showAsAction="never" />
     <item
-        android:id="@+id/cab_empty_recycle_bin"
+        android:id="@+id/menuCabEmptyRecycle_bin"
         android:title="@string/empty_recycle_bin"
-        app:showAsAction="never"/>
+        app:showAsAction="never" />
     <item
-        android:id="@+id/cab_empty_disable_recycle_bin"
+        android:id="@+id/menuCabEmptyDisableRecycleBin"
         android:title="@string/empty_and_disable_recycle_bin"
-        app:showAsAction="never"/>
+        app:showAsAction="never" />
     <item
-        android:id="@+id/cab_exclude"
+        android:id="@+id/menuCabExclude"
         android:title="@string/exclude"
-        app:showAsAction="never"/>
+        app:showAsAction="never" />
     <item
-        android:id="@+id/cab_lock"
+        android:id="@+id/menuCabLock"
         android:title="@string/lock_folder"
-        app:showAsAction="never"/>
+        app:showAsAction="never" />
     <item
-        android:id="@+id/cab_unlock"
+        android:id="@+id/menuCabUnlock"
         android:title="@string/unlock_folder"
-        app:showAsAction="never"/>
+        app:showAsAction="never" />
     <item
-        android:id="@+id/cab_change_cover_image"
+        android:id="@+id/menuCabChangeCoverImage"
         android:title="@string/change_cover_image"
         app:showAsAction="never">
         <menu>
             <item
-                android:id="@+id/cab_select_photo"
-                android:title="@string/select_photo"/>
+                android:id="@+id/menuCabSelectPhoto"
+                android:title="@string/select_photo" />
             <item
-                android:id="@+id/cab_use_default"
-                android:title="@string/use_default"/>
+                android:id="@+id/menuCabUseDefault"
+                android:title="@string/use_default" />
         </menu>
     </item>
     <item
-        android:id="@+id/cab_select_all"
+        android:id="@+id/meuCabSelectAll"
         android:icon="@drawable/ic_select_all_vector"
         android:title="@string/select_all"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="ifRoom" />
 </menu>
