--- a/app/src/main/res/menu/menu_video_player.xml
+++ b/app/src/main/res/menu/menu_video_player.xml
@@ -12,7 +12,7 @@
         android:title="@string/share"
         app:showAsAction="ifRoom"/>
     <item
-        android:id="@+id/menu_open_with"
+        android:id="@+id/menuOpenWith"
         android:title="@string/open_with"
         app:showAsAction="never"/>
 </menu>
